fixed spacing issues, added next page to blog posts

--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -9,33 +9,37 @@ main {
 .home-background {
 
     height: 165vw;
-    width: 153vw;
+    width: auto;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     color: white;
     font-size: 19px;
     line-height: 21px;
+    margin: 2vh 0 2vh 0;
 
     @include tablet {
         height: 120vw;
-        width: 112vw;
+        width: auto;
         font-size: 45px;
         line-height: 47px;
+        margin: 3vh 0 3vh 0;
     }
 
     @include laptop {
         height: 62vw;
-        width: 84vw;
+        width: auto;
         font-size: 45px;
         line-height: 47px;
+        margin: 5vh 5vh 5vh 0;
     }
 
     @include desktop {
         height: 62vw;
-        width: 84vw;
+        width: auto;
         font-size: 64px;
         line-height: 66px;
+        margin: 5vh 5vh 5vh 0;
     }
 
     display: flex;
@@ -43,7 +47,7 @@ main {
     justify-content: center;
 
     h1, p {
-    	width: 35%;
+    	width: 50vw;
         margin: 0 0 0 20vw;
 
         @include tablet {
